OPENAM-4080 Fixing Number Format Exception bug